Finished the 1st assignment

--- a/index.html
+++ b/index.html
@@ -3,10 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jack Smith Portfolio</title>
+    <title>Jack Smith's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Hello I'm</h2>
-    <h1>Jack Smith</h1>
+    <section class="header">
+        
+        <div class="half-width1">
+    <h1>Hello I'm</h1>
+    <h1><span id="name-highlight" class="crimson">Jack Smith</span></h1>
+            <p>You might saw me jumping, climbing buildings, and stopping trains
+                But nobody pays me a dime for that work.
+            </p>
+            <br>
+            <br>
+            <a class="link-button" target="_blank" href="https://www.freecodecamp.org/ishmamsaeid">HIRE ME</a>
+        </div>
+        <div class="half-width2">
+            <img src="images/jack.png">
+        </div>
+    
+    </section>
+
+    <section class="biography">
+        <div class="half-width3">
+            <img src="images/jack_dream.png">
+        </div>
+        <div class="half-width4">
+            <h1>Biography</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consequat nisl vel pretium lectus quam id. Nulla posuere sollicitudin aliquam ultrices sagittis orci a.
+            </p>
+            <br>
+            <br>
+            <a class="link-button" target="_blank" href="https://www.freecodecamp.org/ishmamsaeid">DOWNLOAD CV</a>
+        </div>
+    </section>
+
+    <section class="latest-work">
+        <h1><span id="my-work">My Latest Work</span></h1>
+        <div class="work1">
+            <img src="images/latest-work/work-1.png">
+        </div>
+        <div class="work2">
+            <img src="images/latest-work/work-2.jpg">
+        </div>
+        <div class="work3">
+            <img src="images/latest-work/work-3.jpg">
+        </div>
+    </section>
+
+    <section class="client">
+        <div class="client-saying">
+        <h1>What Client are say</h1>
+        <h4>Bruce Moccy</h4>
+        <h5>Founder & CEO Alies</h5>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+        <br>
+        <br>
+        <div class="messege-button">
+        <a class="messege" target="_blank" href="https://www.freecodecamp.org/ishmamsaeid">Leave a messege in the<h2>programming.her1@gmail.com</h2></a>
+        </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Programming Hero initiative  &#169; 2020 all rights reserved.</p>
+    </footer>
+
 </body>
 </html>
