added social profile in footer section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     </section>
 
     <footer>
+        <div class="profile">
+            <a href="#" class="profile-link-fb" target="_blank">Facebook</a>
+            <a href="#" class="profile-link-git" target="_blank">Github</a>
+            <a href="#" class="profile-link-tw" target="_blank">twitter</a>
+        </div>
         <p>Programming Hero initiative  &#169; 2020 all rights reserved.</p>
     </footer>
 
